            NOTE: Please refer to the migration notes!

    Checks & Agents:
    * 0994 FIX: agent plugin smart: fixed syntax error
    * 0989 FIX: logwatch.ec: Fix forwarding multiple messages via syslog/TCP...
    * 0943 FIX: if.include: fixed incorrect traffic percentage values in the check output of if checks...

    WATO:
    * 0990 FIX: Fix HTTP error handling in bulk inventory...

    Livestatus:
    * 0988 FIX: livedump: Fix exception in case no contact groups are defined for a service


1.2.5i4:
    Core & Setup:
    * 0940 SEC: Fixed various core SIGSEGV when using malformed livestatus queries...

    Checks & Agents:
    * 0812 nginx_status: New check for monitoring status information of the Nginx web server...
    * 0986 citrix_licenses: new check for monitoring Citrix licenses
    * 0814 Agent versions can now be checked with "at least version X" parameters...
    * 0815 mysql_slave: New check for monitoring MySQL slave sync state
    * 0617 adva_fsp_if: new check to monitor interfaces of the ADVA FSP 3000 scalable optical transport solution
    * 0618 adva_fsp_current: new check for the power supply units of the ADVA FSP 3000 scalable optical transport solution
    * 0619 adva_fsp_temp: new check to monitor temperature and temperature trends on ADVA scalable optical transport solutions
    * 0993 raritan_pdu_inlet: now delivers performance data
    * 1003 ibm_svc_enclosure: support new firmware, also check fan modules
    * 0616 FIX: brocade.fan, brocade.power, brocade.temp: will now only discover services which are not marked as absent
    * 0992 FIX: zfs_arc_cache: returns OK even if values of arc meta are missing...
    * 0936 FIX: agent_ibmsvc: improved error messages on using wrong credentials
    * 0621 FIX: zfsget: better filesystem selection and calculation of sizes...
    * 0819 FIX: Fixed keepalive termination in case of exceptions during checking...
    * 0622 FIX: cisco_temp_sensor: fix to also work with newer IOS versions